--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -280,12 +280,12 @@
     <section id="ch5" class="chapter-anchor">
       <h2 class="h5 chapter-header">Chapter 5 — The Paradox of Progress</h2>
       <div class="row">
-        <div class="col-sm-6 col-md-4 mb-4">
+         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="5. Tumba Neoliberalismo.jpeg" target="_blank">
-              <img src="5. Tumba Neoliberalismo.jpeg" class="thumb" alt="No estamos en guerra">
+            <a href="5. Chile Slums.jpeg" target="_blank">
+              <img src="5. Chile Slums.jpeg" class="thumb" alt="OCDE">
             </a>
-            <figcaption>"Chile será la tumba del neoliberalismo"<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
+            <figcaption><em>Campamento</em> in Santiago, Chile.<br><small><em>(Catcomm)</em></small></figcaption>
           </figure>
         </div>
          <div class="col-sm-6 col-md-4 mb-4">
@@ -296,12 +296,12 @@
             <figcaption>Michelle Bachelet (and Andrés Velasco) accept invitation to join OCDE from Secretary General José Ángel Gurría.<br><small><em>(EFE)</em></small></figcaption>
           </figure>
         </div>
-         <div class="col-sm-6 col-md-4 mb-4">
+        <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="5. Chile Slums.jpeg" target="_blank">
-              <img src="5. Chile Slums.jpeg" class="thumb" alt="OCDE">
+            <a href="5. Santiago.jpeg" target="_blank">
+              <img src="5. Santiago.jpeg" class="thumb" alt="Sanhattan">
             </a>
-            <figcaption>Campamento in Chile.<br><small><em>(Catcomm)</em></small></figcaption>
+            <figcaption><em>Sanhattan</em> in Santiago, Chile<br><small><em>(iStock / tifonimages)</em></small></figcaption>
           </figure>
         </div>
       </div>
@@ -414,6 +414,14 @@
               <img src="9. Dignidad.jpeg" class="thumb" alt="Dignidad">
             </a>
             <figcaption>"Dignidad"<br><small><em>(Página 19)</em></small></figcaption>
+          </figure>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="5. Tumba Neoliberalismo.jpeg" target="_blank">
+              <img src="5. Tumba Neoliberalismo.jpeg" class="thumb" alt="No estamos en guerra">
+            </a>
+            <figcaption>"Chile será la tumba del neoliberalismo"<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
           </figure>
         </div>
   </div>
