--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -370,18 +370,26 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="9.1. No estamos en guerra.jpeg" target="_blank">
-              <img src="9.1. No estamos en guerra.jpeg" class="thumb" alt="No estamos en guerra">
+            <a href="9. No estamos en guerra.jpeg" target="_blank">
+              <img src="9. No estamos en guerra.jpeg" class="thumb" alt="No estamos en guerra">
             </a>
             <figcaption>"No estamos en guerra"<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="9.2. La Marcha mas Grande.jpeg" target="_blank">
-              <img src="9.2. La Marcha mas Grande.jpeg" class="thumb" alt="La Marcha más Grande">
+            <a href="9. La Marcha mas Grande.jpeg" target="_blank">
+              <img src="9. La Marcha mas Grande.jpeg" class="thumb" alt="La Marcha más Grande">
             </a>
             <figcaption>"La Marcha más Grande"<br><small><em>(BBC / Susana Hidalgo)</em></small></figcaption>
+          </figure>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="9. Boric.jpeg" target="_blank">
+              <img src="9. Boric.jpeg" class="thumb" alt="La Marcha más Grande">
+            </a>
+            <figcaption>Deputy Boric comfronts Military in Plaza Dignidad<br><small><em>(Agencia Uno / La Tercera)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -405,7 +413,7 @@
             <a href="9. Resistencia.jpeg" target="_blank">
               <img src="9. Resistencia.jpeg" class="thumb" alt="Resistencia">
             </a>
-            <figcaption>"La Marcha más Grande"<br><small><em>(Pablo Rojas Madariaga/NurPhoto/PA Image)</em></small></figcaption>
+            <figcaption>"Protests"<br><small><em>(Pablo Rojas Madariaga/NurPhoto/PA Image)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -418,8 +426,8 @@
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="5. Tumba Neoliberalismo.jpeg" target="_blank">
-              <img src="5. Tumba Neoliberalismo.jpeg" class="thumb" alt="No estamos en guerra">
+            <a href="9. Tumba Neoliberalismo.jpeg" target="_blank">
+              <img src="9. Tumba Neoliberalismo.jpeg" class="thumb" alt="No estamos en guerra">
             </a>
             <figcaption>"Chile será la tumba del neoliberalismo"<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
           </figure>
