--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -389,7 +389,7 @@
             <a href="9. Boric.jpeg" target="_blank">
               <img src="9. Boric.jpeg" class="thumb" alt="La Marcha más Grande">
             </a>
-            <figcaption>Deputy Boric comfronts Military in Plaza Dignidad<br><small><em>(Agencia Uno / La Tercera)</em></small></figcaption>
+            <figcaption>Deputy Gabriel Boric in Plaza Baquedano<br><small><em>(Agencia Uno / La Tercera)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -432,8 +432,18 @@
             <figcaption>"Chile será la tumba del neoliberalismo"<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
           </figure>
         </div>
-  </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="9. Violador.jpeg" target="_blank">
+              <img src="9. Violador.jpeg" class="thumb" alt="No estamos en guerra">
+            </a>
+            <figcaption>"Un violador en tu camino"<br><small><em>(Martin Bernetti/AFP via Getty Images)</em></small></figcaption>
+          </figure>
+        </div>
+      </div>
 </section>
+
+
 
     <!-- Chapter 10 -->
     <section id="ch10" class="chapter-anchor">
