--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -418,14 +418,6 @@
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="9. Iglesia.jpeg" target="_blank">
-              <img src="9. Iglesia.jpeg" class="thumb" alt="Iglesia">
-            </a>
-            <figcaption>A church burns<br><small><em>(Instagram / @peppadelkaos)</em></small></figcaption>
-          </figure>
-        </div>
-        <div class="col-sm-6 col-md-4 mb-4">
-          <figure>
             <a href="9. ACAB.jpeg" target="_blank">
               <img src="9. ACAB.jpeg" class="thumb" alt="ACAB">
             </a>
@@ -440,7 +432,23 @@
             <figcaption>"Protests"<br><small><em>(Pablo Rojas Madariaga/NurPhoto/PA Image)</em></small></figcaption>
           </figure>
         </div>
-      </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="9. Iglesia2.jpeg" target="_blank">
+              <img src="9. Iglesia2.jpeg" class="thumb" alt="Iglesia">
+            </a>
+            <figcaption>San Francisco de Borja Church<br><small><em>(Instagram / @peppadelkaos)</em></small></figcaption>
+          </figure>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="9. Iglesia2.jpeg" target="_blank">
+              <img src="9. Iglesia2.jpeg" class="thumb" alt="Iglesia">
+            </a>
+            <figcaption>Iglesia de la Asunción<br><small><em>(El Mostrador)</em></small></figcaption>
+          </figure>
+        </div>
+  </div>
 </section>
 
 
