--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -434,8 +434,8 @@
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="9. Iglesia2.jpeg" target="_blank">
-              <img src="9. Iglesia2.jpeg" class="thumb" alt="Iglesia">
+            <a href="9. Iglesia.jpeg" target="_blank">
+              <img src="9. Iglesia.jpeg" class="thumb" alt="Iglesia">
             </a>
             <figcaption>San Francisco de Borja Church<br><small><em>(Instagram / @peppadelkaos)</em></small></figcaption>
           </figure>
