--- a/theseus/index.html
+++ b/theseus/index.html
@@ -268,7 +268,7 @@
     <div id="chapters"></div>
 
     <!-- ========= CHAPTER 1 ========= -->
-    <div id="chapter-1" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch1" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br><br>
         CHAPTER 1: From stability to upheaval<br><br>
@@ -301,8 +301,34 @@
 
     <hr>
 
+        <!-- Jump to chapters -->
+    <div class="alert alert-light border jumpbar" id="chapters">
+      <strong class="mr-2">Jump to chapter:</strong>
+      <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>    
+      <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch5">5</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch6">6</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch7">7</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch11">11</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>      
+      <a class="btn btn-sm btn-outline-primary" href="#ch13">13</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch15">15</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch17">17</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch18">18</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch19">19</a>
+    </div>
+  </div>
+
+   <hr>
+
     <!-- ========= CHAPTER 2 ========= -->
-    <div id="chapter-2" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch2" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 2: THE 1980 CONSTITUTION</em><br><br>
@@ -336,7 +362,7 @@
     <hr>
 
     <!-- ========= CHAPTER 3 ========= -->
-    <div id="chapter-3" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch3" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 3: Neoliberalism: Problem or solution?</em><br><br>
@@ -369,8 +395,34 @@
 
     <hr>
 
+  <!-- Jump to chapters -->
+    <div class="alert alert-light border jumpbar" id="chapters">
+      <strong class="mr-2">Jump to chapter:</strong>
+      <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>    
+      <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch5">5</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch6">6</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch7">7</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch11">11</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>      
+      <a class="btn btn-sm btn-outline-primary" href="#ch13">13</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch15">15</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch17">17</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch18">18</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch19">19</a>
+    </div>
+  </div>
+  
+  <hr>
+
     <!-- ========= CHAPTER 4 ========= -->
-    <div id="chapter-4" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch4" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 4: Two decades of stability</em><br><br>
@@ -404,7 +456,7 @@
     <hr>
 
     <!-- ========= CHAPTER 5 ========= -->
-    <div id="chapter-5" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch5" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 5: The paradox of progress</em><br><br>
@@ -437,8 +489,35 @@
 
     <hr>
 
+
+  <!-- Jump to chapters -->
+    <div class="alert alert-light border jumpbar" id="chapters">
+      <strong class="mr-2">Jump to chapter:</strong>
+      <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>    
+      <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch5">5</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch6">6</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch7">7</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch11">11</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>      
+      <a class="btn btn-sm btn-outline-primary" href="#ch13">13</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch15">15</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch17">17</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch18">18</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch19">19</a>
+    </div>
+  </div>
+  
+  <hr>
+
     <!-- ========= CHAPTER 6 ========= -->
-    <div id="chapter-6" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch6" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 6: A shifting political system</em><br><br>
@@ -472,7 +551,7 @@
     <hr>
 
     <!-- ========= CHAPTER 7 ========= -->
-    <div id="chapter-7" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch7" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 7: The erosion of voter–party linkages and representation backsliding</em><br><br>
@@ -505,8 +584,35 @@
 
     <hr>
 
+
+  <!-- Jump to chapters -->
+    <div class="alert alert-light border jumpbar" id="chapters">
+      <strong class="mr-2">Jump to chapter:</strong>
+      <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>    
+      <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch5">5</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch6">6</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch7">7</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch11">11</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>      
+      <a class="btn btn-sm btn-outline-primary" href="#ch13">13</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch15">15</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch17">17</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch18">18</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch19">19</a>
+    </div>
+  </div>
+  
+  <hr>
+
     <!-- ========= CHAPTER 8 ========= -->
-    <div id="chapter-8" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch8" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 8: Emergence of a rupturist discourse</em><br><br>
@@ -540,7 +646,7 @@
     <hr>
 
     <!-- ========= CHAPTER 9 ========= -->
-    <div id="chapter-9" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch9" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 9: October 18, 2019</em><br><br>
@@ -573,8 +679,35 @@
 
     <hr>
 
+
+  <!-- Jump to chapters -->
+    <div class="alert alert-light border jumpbar" id="chapters">
+      <strong class="mr-2">Jump to chapter:</strong>
+      <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>    
+      <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch5">5</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch6">6</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch7">7</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch11">11</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>      
+      <a class="btn btn-sm btn-outline-primary" href="#ch13">13</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch15">15</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch17">17</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch18">18</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch19">19</a>
+    </div>
+  </div>
+  
+  <hr>
+  
     <!-- ========= CHAPTER 10 ========= -->
-    <div id="chapter-10" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch10" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 10: The constitutional design</em><br><br>
@@ -608,7 +741,7 @@
     <hr>
 
     <!-- ========= CHAPTER 11 ========= -->
-    <div id="chapter-11" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch11" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 11: The rise of Gabriel Boric</em><br><br>
@@ -642,7 +775,7 @@
     <hr>
 
     <!-- ========= CHAPTER 12 ========= -->
-    <div id="chapter-12" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch12" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 12: The (first) constitutional convention</em><br><br>
@@ -676,7 +809,7 @@
     <hr>
 
     <!-- ========= CHAPTER 13 ========= -->
-    <div id="chapter-13" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch13" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 13: Understanding rejection: Why the first constitutional process failed</em><br><br>
@@ -710,7 +843,7 @@
     <hr>
 
     <!-- ========= CHAPTER 14 ========= -->
-    <div id="chapter-14" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch14" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 14: Constitutional resurrection</em><br><br>
@@ -744,7 +877,7 @@
     <hr>
 
     <!-- ========= CHAPTER 15 ========= -->
-    <div id="chapter-15" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch15" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 15: From instability to realignment</em><br><br>
@@ -778,7 +911,7 @@
     <hr>
 
     <!-- ========= CHAPTER 16 ========= -->
-    <div id="chapter-16" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch16" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 16: The (second) constitutional council</em><br><br>
@@ -812,7 +945,7 @@
     <hr>
 
     <!-- ========= CHAPTER 17 ========= -->
-    <div id="chapter-17" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+    <div id="ch17" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 17: Coming to terms: Why the second constitutional process failed</em><br><br>
@@ -846,8 +979,8 @@
     <hr>
 
     <!-- ========= CHAPTER 18 ========= -->
-    <div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px auto; max-width: 700px; text-align: center; box-sizing: border-box;">
-      <div style="margin: 0;">
+     <div id="ch18" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+      <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 18: Looking back on four years of upheaval</em><br><br>
 
@@ -881,8 +1014,8 @@
     <hr>
 
     <!-- ========= CHAPTER 19 ========= -->
-    <div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px auto; max-width: 700px; text-align: center; box-sizing: border-box;">
-      <div style="margin: 0;">
+     <div id="ch19" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
+      <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
         <em>CHAPTER 19: Chile’s reckoning and the limits of transformation</em><br><br>
 
