--- a/theseus/index.html
+++ b/theseus/index.html
@@ -303,6 +303,8 @@
 
         <!-- Jump to chapters -->
     <div class="alert alert-light border jumpbar" id="chapters">
+
+    <hr>
       <strong class="mr-2">Jump to chapter:</strong>
       <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
       <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>    
@@ -323,9 +325,8 @@
       <a class="btn btn-sm btn-outline-primary" href="#ch18">18</a>
       <a class="btn btn-sm btn-outline-primary" href="#ch19">19</a>
     </div>
-  </div>
-
    <hr>
+</div>
 
     <!-- ========= CHAPTER 2 ========= -->
     <div id="ch2" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
@@ -705,7 +706,7 @@
   </div>
   
   <hr>
-  
+
     <!-- ========= CHAPTER 10 ========= -->
     <div id="ch10" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
@@ -773,6 +774,33 @@
     </div>
 
     <hr>
+
+
+  <!-- Jump to chapters -->
+    <div class="alert alert-light border jumpbar" id="chapters">
+      <strong class="mr-2">Jump to chapter:</strong>
+      <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>    
+      <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch5">5</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch6">6</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch7">7</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch11">11</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>      
+      <a class="btn btn-sm btn-outline-primary" href="#ch13">13</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch15">15</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch17">17</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch18">18</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch19">19</a>
+    </div>
+  </div>
+  
+  <hr>
 
     <!-- ========= CHAPTER 12 ========= -->
     <div id="ch12" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
@@ -842,6 +870,33 @@
 
     <hr>
 
+
+  <!-- Jump to chapters -->
+    <div class="alert alert-light border jumpbar" id="chapters">
+      <strong class="mr-2">Jump to chapter:</strong>
+      <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>    
+      <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch5">5</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch6">6</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch7">7</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch11">11</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>      
+      <a class="btn btn-sm btn-outline-primary" href="#ch13">13</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch15">15</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch17">17</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch18">18</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch19">19</a>
+    </div>
+  </div>
+  
+  <hr>
+
     <!-- ========= CHAPTER 14 ========= -->
     <div id="ch14" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
@@ -910,6 +965,33 @@
 
     <hr>
 
+
+  <!-- Jump to chapters -->
+    <div class="alert alert-light border jumpbar" id="chapters">
+      <strong class="mr-2">Jump to chapter:</strong>
+      <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>    
+      <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch5">5</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch6">6</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch7">7</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch11">11</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>      
+      <a class="btn btn-sm btn-outline-primary" href="#ch13">13</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch15">15</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch17">17</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch18">18</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch19">19</a>
+    </div>
+  </div>
+  
+  <hr>
+
     <!-- ========= CHAPTER 16 ========= -->
     <div id="ch16" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
@@ -977,6 +1059,33 @@
     </div>
 
     <hr>
+
+
+  <!-- Jump to chapters -->
+    <div class="alert alert-light border jumpbar" id="chapters">
+      <strong class="mr-2">Jump to chapter:</strong>
+      <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>    
+      <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch5">5</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch6">6</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch7">7</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch11">11</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>      
+      <a class="btn btn-sm btn-outline-primary" href="#ch13">13</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch15">15</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch17">17</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch18">18</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch19">19</a>
+    </div>
+  </div>
+  
+  <hr>
 
     <!-- ========= CHAPTER 18 ========= -->
      <div id="ch18" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
