--- a/theseus/index.html
+++ b/theseus/index.html
@@ -395,9 +395,10 @@
 
     <hr>
 
-  <!-- Jump to chapters -->
+        <!-- Jump to chapters -->
     <div class="alert alert-light border jumpbar" id="chapters">
       <strong class="mr-2">Jump to chapter:</strong>
+      <div class="mt-2">
       <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
       <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>    
       <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
@@ -417,9 +418,9 @@
       <a class="btn btn-sm btn-outline-primary" href="#ch18">18</a>
       <a class="btn btn-sm btn-outline-primary" href="#ch19">19</a>
     </div>
-  </div>
+   <hr>
+</div>
   
-  <hr>
 
     <!-- ========= CHAPTER 4 ========= -->
     <div id="ch4" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
