--- a/theseus/index.html
+++ b/theseus/index.html
@@ -44,6 +44,16 @@
     .banner-image { width: 100%; max-height: 100px; object-fit: cover; display: block; }
   </style>
 
+<style>
+  .chapter-btn {
+    min-width: 45px;  /* big enough for "19" */
+    text-align: center;
+  }
+  .gap-2 {
+    gap: 0.5rem; /* ensures spacing on wrap */
+  }
+</style>
+
   <link rel="alternate" type="application/rss+xml" href="https://kennethbunker.github.io/index.xml" title="Kenneth Bunker" />
 
   <!-- Social Sharing Meta Tags for Book Page -->
@@ -301,30 +311,31 @@
 
     <hr>
 
-        <!-- Jump to chapters -->
-    <div class="alert alert-light border jumpbar" id="chapters">
-      <strong class="mr-2">Jump to chapter:</strong>
-      <br><br>
-      <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>    
-      <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch5">5</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch6">6</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch7">7</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch11">11</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>      
-      <a class="btn btn-sm btn-outline-primary" href="#ch13">13</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch15">15</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch17">17</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch18">18</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch19">19</a>
-    </div>
-   <hr>
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <strong class="mr-2">Jump to chapter:</strong>
+  <br><br>
+  <div class="d-flex flex-wrap gap-2">
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+  </div>
 </div>
 
     <!-- ========= CHAPTER 2 ========= -->
@@ -395,7 +406,7 @@
 
     <hr>
 
-        <!-- Jump to chapters -->
+<!-- Jump to chapters -->
     <div class="alert alert-light border jumpbar" id="chapters">
       <strong class="mr-2">Jump to chapter:</strong>
       <br><br>
