--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -20,6 +20,17 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
 
+<style>
+  .chapter-btn {
+    min-width: 45px;  /* big enough for "19" */
+    text-align: center;
+  }
+  .gap-2 {
+    gap: 0.5rem; /* ensures spacing on wrap */
+  }
+</style>
+
+
   <style>
     body { margin: 40px; font-family: Inconsolata, monospace; }
     /* Banner (matches "files") */
@@ -107,27 +118,6 @@
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/images/">Images</a>
       </div>
     </div>
-
-    <!-- Jump to chapters -->
-    <div class="alert alert-light border jumpbar" id="chapters">
-      <strong class="mr-2">Jump to chapter:</strong>
-      <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>    
-      <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch5">5</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch6">6</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch7">7</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch11">11</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>      
-      <a class="btn btn-sm btn-outline-primary" href="#ch13">13</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch15">15</a>
-      <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
-    </div>
-  </div>
 
 
 
@@ -220,6 +210,33 @@
     </section>
 
 
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <div class="d-flex flex-wrap align-items-center gap-2">
+    <strong class="mr-2">Jump to chapter:</strong>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+  </div>
+</div>
+
+
     <!-- Chapter 4 -->
     <section id="ch4" class="chapter-anchor">
       <h2 class="h5 chapter-header">Chapter 4 — Two decades of stability</h2>
@@ -306,6 +323,33 @@
         </div>
       </div>
     </section>
+
+
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <div class="d-flex flex-wrap align-items-center gap-2">
+    <strong class="mr-2">Jump to chapter:</strong>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+  </div>
+</div>
 
 
     <!-- Chapter 8 -->
@@ -451,6 +495,32 @@
   </div>
 </section>
 
+
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <div class="d-flex flex-wrap align-items-center gap-2">
+    <strong class="mr-2">Jump to chapter:</strong>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+  </div>
+</div>
 
 
     <!-- Chapter 10 -->
