--- a/theseus/index.html
+++ b/theseus/index.html
@@ -46,11 +46,17 @@
 
 <style>
   .chapter-btn {
-    min-width: 45px;  /* big enough for "19" */
+    min-width: 45px;   /* makes 1–19 same width */
     text-align: center;
   }
-  .gap-2 {
-    gap: 0.5rem; /* ensures spacing on wrap */
+
+  .chapter-buttons {
+    flex: 1;           /* takes remaining space */
+  }
+
+  .chapter-label {
+    display: inline-block;
+    min-width: 90px;   /* adjust until "1" sits above "14" */
   }
 </style>
 
@@ -314,26 +320,28 @@
 <!-- Jump to chapters -->
 <div class="alert alert-light border jumpbar" id="chapters">
   <div class="d-flex flex-wrap align-items-center gap-2">
-    <strong class="mr-2">Jump to chapter: </strong>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+    <strong class="chapter-label">Jump to chapter:</strong>
+    <div class="chapter-buttons d-flex flex-wrap gap-2">
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+      <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+    </div>
   </div>
 </div>
 
